--- a/login.html
+++ b/login.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title><b><i>LOGIN</i></b></title>
+<title>LOGIN</title>
 <h1><b><i>LOGIN</i></b></h1>
 <h2>This is login page</h2>
 </head>
